--- a/padi-dstm/Client/Client.csproj
+++ b/padi-dstm/Client/Client.csproj
@@ -46,13 +46,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Client.cs" />
     <Compile Include="ClientUI.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="ClientUI.Designer.cs">
       <DependentUpon>ClientUI.cs</DependentUpon>
     </Compile>
-    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="ClientUI.resx">
       <DependentUpon>ClientUI.cs</DependentUpon>
