--- a/padi-dstm/Client/Client.csproj
+++ b/padi-dstm/Client/Client.csproj
@@ -82,9 +82,9 @@
       <Project>{C9156A5C-E4BB-4BD2-A047-D60E46B9D014}</Project>
       <Name>CommonTypes</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Library\Library.csproj">
+    <ProjectReference Include="..\Library\PadiDstm.csproj">
       <Project>{F9C8D0FE-51FE-4ACC-B9FC-F424B56258BF}</Project>
-      <Name>Library</Name>
+      <Name>PadiDstm</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
