--- a/padi-dstm/DataServer/DataServer.csproj
+++ b/padi-dstm/DataServer/DataServer.csproj
@@ -60,7 +60,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DataServer.cs" />
+    <Compile Include="LockManager.cs" />
+    <Compile Include="PadInt.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Transactions.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CommonTypes\CommonTypes.csproj">
