--- a/padi-dstm/CommonTypes/CommonTypes.csproj
+++ b/padi-dstm/CommonTypes/CommonTypes.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CommonTypes.cs" />
+    <Compile Include="OperationException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TxException.cs" />
   </ItemGroup>
