--- a/padi-dstm/CommonTypes/CommonTypes.csproj
+++ b/padi-dstm/CommonTypes/CommonTypes.csproj
@@ -44,6 +44,7 @@
     <Compile Include="CommonTypes.cs" />
     <Compile Include="OperationException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TimeoutException.cs" />
     <Compile Include="TxException.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
